# RealTimeSpecularHighlightRemoval

./: .gitignore  BUILD.adoc  CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
include/: SpecularHighlightRemoval.hpp  useCUDA.h
src/: SpecularHighlightRemoval.cpp  main.cpp
